# claude-github-runner

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  bootstrap.sh  config.example.yml  install.sh  pyproject.toml  spec.md
claude_github_runner/: __init__.py  __main__.py  cli.py  config.py  database.py  discovery.py  github.py  worker.py  workspace.py
claude_github_runner/ui/: __init__.py  app.py  db.py  logs.py  models.py  systemd.py
docs/: DATABASE.md
docs/adr/: 001-fork-based-concurrency.md  002-github-cli-integration.md  003-sqlite-storage.md  004-polling-vs-webhooks.md  README.md
systemd/: claude-github-runner-daemon.service  claude-github-runner-reap.service  claude-github-runner-reap.timer  claude-github-runner.service  claude-github-runner.timer
