[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-github-runner"
version = "0.1.0"
description = "Headless GitHub automation service powered by Claude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Anthropic", email = "support@anthropic.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["github", "automation", "claude", "ai"]

dependencies = [
    "pyyaml>=6.0",
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
claude-github-runner = "claude_github_runner.cli:main"
cgr = "claude_github_runner.cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/claude-github-runner"
Documentation = "https://github.com/anthropics/claude-github-runner#readme"
Repository = "https://github.com/anthropics/claude-github-runner"
Issues = "https://github.com/anthropics/claude-github-runner/issues"

[tool.setuptools.packages.find]
include = ["claude_github_runner*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=claude_github_runner"
